# agents_study

./: .gitignore
especialista_em_jurisprudencia/: README.md  pyproject.toml
especialista_em_jurisprudencia/src/especialista_em_jurisprudencia/: crew.py  main.py  report_old.md  teste.ipynb
especialista_em_jurisprudencia/src/especialista_em_jurisprudencia/config/: agents.yaml  tasks.yaml
especialista_em_jurisprudencia/src/especialista_em_jurisprudencia/db/: chroma.sqlite3
